--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <style>
             body {
-                background-image:url("");
+                background-image:url("school.jpg");
             }
         </style>
 
