--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 padding:10px 20px;
                 text-align: center;
                 color:white;
+                font-family: sans;
 
             }
         </style>
