--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
 
             }
         </style>
+        <img class="image" src="school.jpg">
+        <style>
+            .image {
+                width:457px;
+                height:291px;
+                border-radius:15px;
+            }
+            
+        </style>
+
 
         <style>
             body {
-                background-image:url("school.jpg");
+                background-color: cornsilk;
             }
         </style>
 
