--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
         <style>
             h1 {
-                background-color:aqua;
+                background-color:#1f2121;
                 border-radius: 13px;
                 text-decoration: none;
                 padding:10px 20px;
                 text-align: center;
                 color:white;
                 font-family: sans;
+                box-shadow:5px 10px 15px #3e3f40;
 
             }
         </style>
