--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
     
     <body>
-        <h1>Pas website</h1>
+        
+        <h1>Pas student website</h1>
+
+        <a class="button" href="learn.html">Learn coding</a>
+
+        <style>
+            .button {
+                background-color: cornsilk;
+                border-radius: 15px;
+                color:black;
+                font-family: sans;
+            }
+            .button:hover {
+                background-color: black;
+                color:cornsilk;
+                border-radius: 15px;
+                font-family: sans;
+            }
+        </style>
 
         <style>
             h1 {
