--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
                 border-radius: 15px;
                 color:black;
                 font-family: sans;
+                padding:10px 20px;
+                text-decoration: none;
+                top:0;
             }
             .button:hover {
                 background-color: black;
                 color:cornsilk;
                 border-radius: 15px;
                 font-family: sans;
+                padding:10px 20px;
+                text-decoration: none;
             }
         </style>
 
