--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 padding:10px 20px;
                 text-decoration: none;
                 top:0;
+                position: fixedfi;
             }
             .button:hover {
                 background-color: black;
