--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <body>
         
         <h1>Pas student website</h1>
-
+         <center>
         <a class="button" href="learn.html">Learn coding</a>
+        </center>
 
         <style>
             .button {
@@ -15,7 +16,7 @@
                 font-family: sans;
                 padding:10px 20px;
                 text-decoration: none;
-                top:0;
+                top:90px;
                 position: fixed;
             }
             .button:hover {
