--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <body>
         
         <h1>Pas student website</h1>
-         <center>
         <a class="button" href="learn.html">Learn coding</a>
-        </center>
 
         <style>
             .button {
@@ -16,7 +14,8 @@
                 font-family: sans;
                 padding:10px 20px;
                 text-decoration: none;
-                top:140px;
+                right:0;
+                top:605px;
                 position: fixed;
             }
             .button:hover {
