--- a/learn.html
+++ b/learn.html
@@ -1,1 +1,14 @@
-<h1>coding</h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Coding education</h1>
+        <style>
+            h1 {
+                text-align:center;
+                font-family: sans;
+                color:black;
+            }
+        </style>
+    
+    </body>
+</html>
