--- a/learn.html
+++ b/learn.html
@@ -9,6 +9,9 @@
                 color:black;
             }
         </style>
+        <p>If you want to learn HTML, you have to learn the basics of HTML</p>
+        <p class="code"> <h1>hello</h1>  </p>
+
     
     </body>
 </html>
