--- a/learn.html
+++ b/learn.html
@@ -10,8 +10,16 @@
             }
         </style>
         <p>If you want to learn HTML, you have to learn the basics of HTML</p>
-        <p class="code"> <h1>hello</h1>  </p>
+        <code> <h1>hello world</h1>     </code>
+   
+        <style>
+            code {
+            background-color: #f5f5f5;
+            padding: 2px 4px;
+            border-radius: 4px;
+            font-family: Consolas, monospace;
+        }
+        </style>
 
-    
     </body>
 </html>
