--- a/learn.html
+++ b/learn.html
@@ -13,12 +13,16 @@
         <pre>
             &lt;h1&gt;This is a heading&lt;/h1&gt;
             </pre>   
+
+
+
         <style>
-            code {
-            background-color: #f5f5f5;
-            padding: 2px 4px;
-            border-radius: 4px;
+            pre {
+            background-color: #111111;
+            padding: 10px 20px;
+            border-radius: 5px;
             font-family: Consolas, monospace;
+            color:darkorange;
         }
         </style>
 
