--- a/learn.html
+++ b/learn.html
@@ -19,7 +19,7 @@
         <style>
             pre {
             background-color: #111111;
-            padding: 10px 20px;
+            padding: 10px;
             border-radius: 5px;
             font-family: Consolas, monospace;
             color:darkorange;
