--- a/learn.html
+++ b/learn.html
@@ -23,6 +23,7 @@
             border-radius: 5px;
             font-family: Consolas, monospace;
             color:darkorange;
+            text-align:center;
         }
         </style>
 
