--- a/learn.html
+++ b/learn.html
@@ -24,6 +24,7 @@
             font-family: Consolas, monospace;
             color:darkorange;
             text-align:center;
+            font-size:24px;
         }
         </style>
 
