--- a/learn.html
+++ b/learn.html
@@ -20,6 +20,7 @@
             pre {
             background-color: #111111;
             padding: 10px;
+            height:40px;
             border-radius: 5px;
             font-family: Consolas, monospace;
             color:darkorange;
