--- a/learn.html
+++ b/learn.html
@@ -9,7 +9,7 @@
                 color:black;
             }
         </style>
-        <p>If you want to learn HTML, you have to learn the basics of HTML</p>
+        <p>If you want to learn HTML, you have to learn the basics of HTML. Headings are mostly used for articles </p>
         <pre>
             &lt;h1&gt;This is a heading&lt;/h1&gt;
             </pre>   
@@ -27,6 +27,13 @@
             text-align:center;
             font-size:24px;
         }
+        </style>
+
+        <style>
+            p {
+                font-family:sans;
+                font-size:medium
+            }
         </style>
 
 
